1/4 of project saved